Clean up and edits

--- a/index.html
+++ b/index.html
@@ -137,7 +137,7 @@ important notes to the trend line:
 To the right and below the filters, there is a box plot showing the same data as a snapshot for the period.  The whiskers represent the lower
 and upper quartiles.  This view allows us to compare player profiles.  Notice that Ben Revere has a higher mean score (17.7) than
 Dioner Navarro (14.4) and Josh Donaldson (9.4).  This doesn't indicate that Revere is a better hitter, but that he profiles as a
-line drive hitter more often (and for which he does get credited, see https://en.wikipedia.org/wiki/Ben_Revere#Offense).  More
+line drive hitter more often (and for which he does get accredited, see https://en.wikipedia.org/wiki/Ben_Revere#Offense).  More
 information on how the score is calculated will be discussed in following sections.
                     </p>
                     <p>
